[package]
name = "rpic"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5", features = ["derive"] }
base64 = "0.22.1"
chrono = "0.4.44"
dirs = "6.0.0"
hmac = "0.12.1"
image = "0.25.9"
md5 = "0.8.0"
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
sha1 = "0.10.6"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
toml = "0.9.8"
uuid = { version = "1.21.0", features = ["v4"] }
webp = "0.3.1"

[dev-dependencies]
tokio = { version = "1.50.0", features = ["full"] }
