[package]
name = "rpic"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
base64 = "0.22"
chrono = "0.4"
dirs = "6.0"
hmac = "0.12"
image = "0.25"
md5 = "0.8"
reqwest = "0.13"
serde = { version = "1", features = ["derive"] }
sha1 = "0.10"
tokio = { version = "1.50", features = ["rt-multi-thread", "macros"] }
toml = "0.9"
uuid = { version = "1.22", features = ["v4"] }
webp = "0.3"

[dev-dependencies]
tokio = { version = "1.50", features = ["full"] }
